Registrar vista difunto
Registrar vista difunto, formulario de registro con los estandares propuestos

--- a/public/components/usuarios/registrarUsuarios/registrarUsuarios.view.html
+++ b/public/components/usuarios/registrarUsuarios/registrarUsuarios.view.html
@@ -8,9 +8,9 @@
 
       <h1 class="text-center">Registro usuario</h1>
 
-      <form action="" class="row mt-5">
+      <form action="" class="row mt-5" name="frmRegistroUsuarios" ng-submit="vm.registrarUsuario(vm.usuarioNuevo)">
 
-        <div class="col-md-4" name="frmRegistroUsuarios" ng-submit="vm.registrarUsuario(vm.usuarioNuevo)">
+        <div class="col-md-4">
 
           <div class="form-group">
             <label for="txtCedula">Número de cédula:</label>
