--- a/public/components/difuntos/registrarDifuntos/registrarDifuntos.view.html
+++ b/public/components/difuntos/registrarDifuntos/registrarDifuntos.view.html
@@ -6,7 +6,7 @@
 
         <div class="col-md-12 mt-5">
 
-            <h1 class="etxt-center">Registre difuntos</h1>
+            <h1 class="text-center">Registre difuntos</h1>
 
             <form action=""class="row mt-5" name="frmRegistroDifuntos" ng-submit="vm.registrarDifunto(vm.difunto)">
 
