Inicio de sesión
Funcionalidad inicio de sesión completa, falta validación

--- a/public/components/includes/_header.html
+++ b/public/components/includes/_header.html
@@ -11,6 +11,9 @@
             <a class="nav-link" ui-sref="landingPage">Inicio</a>
           </li>
           <li class="nav-item" ui-sref-active="active">
+            <a class="nav-link" ui-sref="iniciarSesión">Inicio de sesion</a>
+          </li>
+          <li class="nav-item" ui-sref-active="active">
             <a class="nav-link" ui-sref="registroUsuarios">Registro</a>
           </li>
         </ul>
