--- a/public/components/login/login.view.html
+++ b/public/components/login/login.view.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col-md-12">
           <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-          <button type="click" class="btn btn-danger" ng-click="vm.registrar()">Crear cuenta</button>
+          <button type="button" class="btn btn-danger" ng-click="vm.registrar()">Crear cuenta</button>
         </div>
       </form>
     </div>
