--- a/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
+++ b/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
@@ -42,7 +42,7 @@
                 <button class="btn btn-primary" type="button" ng-click="vm.agregarDifunto(usuario)">Agregar Difunto</button>
               </td>
               <td>
-                <button class="btn btn-warning" type="button" ng-click="vm.listarDifunto(usuario)">Mostar difuntos</button>
+                <button class="btn btn-success" type="button" ng-click="vm.listarDifunto(usuario)">Mostar difuntos</button>
               </td>
               <td>
                 <button class="btn btn-warning" type="button" ng-click="vm.editarUsuario(usuario)">Editar</button>
