--- a/public/components/difuntos/registrarDifuntos/registrarDifuntos.view.html
+++ b/public/components/difuntos/registrarDifuntos/registrarDifuntos.view.html
@@ -6,35 +6,46 @@
 
         <div class="col-md-12 mt-5">
 
-            <h1 class="text-center">Registre difuntos</h1>
+            <h1 class="text-center">Registrar difuntos a {{vm.usuarioActivo}}</h1>
 
-            <form action=""class="row mt-5" name="frmRegistroDifuntos" ng-submit="vm.registrarDifunto(vm.difunto)">
+            <form class="row mt-5" name="frmRegistroDifuntos" ng-submit="vm.registrarDifunto(vm.difuntoNuevo)">
 
                 <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="#nEdad">Edad: </label>
-                            <input type="number" class="form-control" id="nEdad" ng-model="vm.difunto.edad">
-                            <small class="form-text text-danger">* Campo requerido</small>
-                        </div>
+                    <div class="form-group">
+                        <label for="txtEdad">Edad: </label>
+                        <input type="number" class="form-control" id="txtEdad" ng-model="vm.difuntoNuevo.edad">
+                        <small class="form-text text-danger">* Campo requerido</small>
+                    </div>
 
                     <div class="form-group">
                         <label for="#txtApodo">Apodo del difunto: </label>
-                        <input type="text" class="form-control" id="txtApodo" ng-model="vm.difunto.apodo">
+                        <input type="text" class="form-control" id="txtApodo" ng-model="vm.difuntoNuevo.apodo">
                         <small class="form-text text-danger">* Campo requerido</small>
                     </div>
 
                     <div class="form-group">
-                        <label for="#nTamanno">Estatura del difunto (en cm.): </label>
-                        <input type="number" class="form-control" id="nTamanno" ng-model="vm.difunto.estatura">
+                        <label for="sltSexo">Sexo</label>
+                        <select id="sltSexo" class="custom-select" ng-model="vm.difuntoNuevo.sexo" required>
+                            <option value="">Seleccione un sexo</option>
+                            <option value="Femenino">Femenino</option>
+                            <option value="Masculino">Masculino</option>
+                            <option value="Otro">Otro</option>
+                        </select>
+                        <small class="form-text text-danger">* Campo requerido</small>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="#txtTamanno">Estatura del difunto (en cm.): </label>
+                        <input type="number" class="form-control" id="txtTamanno" ng-model="vm.difuntoNuevo.estatura">
                         <small class="form-text text-danger">* Campo requerido</small>
                     </div>
                 </div>
 
-                
-
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-primary">Registrar difunto</button>
+                    <button type="button" class="btn btn-danger" ng-click="vm.regresar()">Regresar</button>
                 </div>
+
             </form>
 
         </div>
