--- a/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
+++ b/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
@@ -1,7 +1,7 @@
-<main class="container">
+<main class="container-fluid">
   <section class="row">
 
-    <div class="col-md-12">
+    <div class="col-md-12 mt-5">
 
       <h1 class="text-center">Listar Usuarios</h1>
       <table class="table mt-5">
