--- a/public/components/usuarios/registrarUsuarios/registrarUsuarios.view.html
+++ b/public/components/usuarios/registrarUsuarios/registrarUsuarios.view.html
@@ -53,23 +53,21 @@
           </div>
           <div class="form-group">
             <label for="sltProvincia">Provincia:</label>
-            <select id="sltProvincia" class="custom-select" ng-model="vm.usuarioNuevo.provincia" required>
+            <select id="sltProvincia" class="custom-select" ng-model="vm.usuarioNuevo.provincia" ng-change="vm.rellenarCantones(vm.usuarioNuevo.provincia._id)" ng-options="provincia as provincia.name for provincia in vm.provincias track by provincia._id" required>
               <option value="">Seleccione una provincia</option>
-              <option value="Provincia">Provincia</option>
             </select>
             <small class="form-text text-danger">* Campo requerido</small>
           </div>
           <div class="form-group">
             <label for="sltCanton">Cantón:</label>
-            <select id="sltCanton" class="custom-select" ng-model="vm.usuarioNuevo.canton" required>
+            <select id="sltCanton" class="custom-select" ng-change="vm.rellenarDistrito(vm.usuarioNuevo.canton._id)" ng-options="canton as canton.name for canton in vm.cantones track by canton._id" ng-model="vm.usuarioNuevo.canton" required>
               <option value="">Seleccione un cantón</option>
-              <option value="Cantón">Cantón</option>
             </select>
             <small class="form-text text-danger">* Campo requerido</small>
           </div>
           <div class="form-group">
             <label for="sltDistrito">Distrito:</label>
-            <select id="sltDistrito" class="custom-select" ng-model="vm.usuarioNuevo.distrito" required>
+            <select id="sltDistrito" class="custom-select" ng-options="distrito as distrito.name for distrito in vm.distritos track by distrito._id" ng-model="vm.usuarioNuevo.distrito" required>
               <option value="">Seleccione un distrito</option>
               <option value="Distrito">Distrito</option>
             </select>
