--- a/public/components/difuntos/listarDifuntos/listarDifuntos.view.html
+++ b/public/components/difuntos/listarDifuntos/listarDifuntos.view.html
@@ -22,10 +22,10 @@
                         <td>{{difunto.sexo}}</td>
                         <td>{{difunto.estatura}}</td>
                         <td>
-                            <button class="btn btn-primary" type="button" ng-click="vm.agregarEntierro(usuario)">Agregar entierro</button>
+                            <button class="btn btn-primary" type="button" ng-click="vm.agregarEntierro(difunto)">Agregar entierro</button>
                         </td>
                         <td>
-                            <button class="btn btn-danger" type="button" ng-click="vm.editarDifuntp(usuario)">Modificar difunto</button>
+                            <button class="btn btn-danger" type="button" ng-click="vm.editarDifunto(difunto)">Modificar difunto</button>
                         </td>
                     </tr>
                 </tbody>
