--- a/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
+++ b/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="cotainer-fluid">
   <section class="row">
 
     <div class="col-md-12 mt-5">
@@ -31,9 +31,9 @@
               <td>{{usuario.primerApellido}}</td>
               <td>{{usuario.segundoApellido}}</td>
               <td>{{usuario.sexo}}</td>
-              <!-- <td>{{usuario.provincia}}</td>
-              <td>{{usuario.canton}}</td> -->
-              <td>{{usuario.distrito}}</td>
+              <!-- <td>{{usuario.provincia.name}}</td>
+              <td>{{usuario.canton.name}}</td> -->
+              <td>{{usuario.distrito.name}}</td>
               <td>{{usuario.nombreUsuario}}</td>
               <td>{{usuario.correo}}</td>
               <!-- <td>{{usuario.contrasenna}}</td> -->
