--- a/public/components/animadores/listarAnimadores/listarAnimadores.view.html
+++ b/public/components/animadores/listarAnimadores/listarAnimadores.view.html
@@ -1,6 +1,6 @@
 <div ng-include="'./components/includes/_header.html'"></div>
 
-<main class="container">
+<main class="container-fluid">
 
     <section class="row">
         <div class="col-md-12 mt-5">
