--- a/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
+++ b/public/components/usuarios/listarUsuarios/listarUsuarios.view.html
@@ -7,6 +7,7 @@
       <table class="table mt-5">
           <thead class="thead-dark">
             <tr>
+              <!-- <th></th> -->
               <th scope="col">Cédula</th>
               <th scope="col">Nombre</th>
               <th scope="col">Primer apellido</th>
@@ -26,6 +27,7 @@
           </thead>
           <tbody>
             <tr ng-repeat="usuario in vm.listarUsuarios">
+              <!-- <td>{{$index+1}}</td> -->
               <td>{{usuario.cedula}}</td>
               <td>{{usuario.nombre}}</td>
               <td>{{usuario.primerApellido}}</td>
@@ -45,7 +47,7 @@
                 <button class="btn btn-success" type="button" ng-click="vm.listarDifunto(usuario)">Mostar difuntos</button>
               </td>
               <td>
-                <button class="btn btn-warning" type="button" ng-click="vm.editarUsuario(usuario)">Editar</button>
+                <button class="btn btn-danger" type="button" ng-click="vm.editarUsuario(usuario)">Editar usuario</button>
               </td>
             </tr>
           </tbody>
