--- a/public/components/entierros/listarEntierros/listarEntierros.view.html
+++ b/public/components/entierros/listarEntierros/listarEntierros.view.html
@@ -7,6 +7,8 @@
             <table class="table mt-5">
                 <thead class="thead-dark">
                     <tr>
+                        <th scope="col">Cédula del cliente</th>
+                        <th scope="col">Código del entierro</th>
                         <th scope="col">Fecha</th>
                         <th scope="col">Lugar</th>
                         <th scope="col">Hora de inicio:</th>
@@ -19,6 +21,8 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="entierro in vm.listarEntierros">
+                        <td>{{entierro.clienteID}}</td>
+                        <td>{{entierro.entierroID}}</td>
                         <td>{{entierro.fecha | date:'dd-MM-yyyy'}}</td>
                         <td>{{entierro.lugar}}</td>
                         <td>{{entierro.horaInicio | date:'HH:mm a'}}</td>
