--- a/public/components/entierros/listarEntierros/listarEntierros.view.html
+++ b/public/components/entierros/listarEntierros/listarEntierros.view.html
@@ -1,3 +1,4 @@
+<div ng-include="'./components/includes/_header.html'"></div>
 <main class="container-fluid">
     <section class="row">
 
@@ -29,13 +30,13 @@
                         <td>{{entierro.horaFinal | date:'HH:mm a'}}</td>
                         <td>{{entierro.prioridad}}</td>
                         <td>
-                            <button class="btn btn-primary" type="button" ng-click="vm.agregarFiesta(entierro)">Agregar fiesta</button>
+                            <button class="btn btn-info" type="button" ng-click="vm.agregarFiesta(entierro)">Agregar fiesta</button>
                         </td>
                         <td>
-                            <button class="btn btn-success" type="button" ng-click="vm.agregarRetoques(entierro)">Agregar retoques</button>
+                            <button class="btn btn-info" type="button" ng-click="vm.agregarRetoques(entierro)">Agregar retoques</button>
                         </td>
                         <td>
-                            <button class="btn btn-danger" type="button" ng-click="vm.editarEntierro(entierro)">Editar Entierro</button>
+                            <button class="btn btn-info" type="button" ng-click="vm.editarEntierro(entierro)">Editar Entierro</button>
                         </td>
                     </tr>
                 </tbody>
@@ -43,8 +44,9 @@
 
         </div>
         <div class="col-md-12">
-            <button type="button" class="btn btn-danger" ng-click="vm.regresar()">Regresar</button>
+            <button type="button" class="btn btn-info" ng-click="vm.regresar()">Regresar</button>
         </div>
 
     </section>
 </main>
+<div ng-include="'./components/includes/_footer.html'"></div>
