--- a/public/components/difuntos/editarDifuntos/editarDifuntos.view.html
+++ b/public/components/difuntos/editarDifuntos/editarDifuntos.view.html
@@ -1,10 +1,9 @@
 <div ng-include="'./components/includes/_header.html'"></div>
-
 <main class="container">
 
     <section class="row">
 
-        <div class="col-md-12 mt-5">
+        <div class="col-md-12 my-5">
 
             <h1 class="text-center">Editando a {{vm.difuntoActivo}}</h1>
 
@@ -15,13 +14,13 @@
                     <div class="form-group">
                         <label for="#txtApodo">Cédula del cliente: </label>
                         <input type="text" class="form-control" id="txtApodo" ng-model="vm.difuntoEditar.clienteID" disabled>
-                        <small class="form-text text-danger">* Campo requerido</small>
+                        <small class="form-text">* No puede editar este campo</small>
                     </div>
 
                     <div class="form-group">
-                        <label for="#txtApodo">Código numerico: </label>
+                        <label for="#txtApodo">Código del difunto: </label>
                         <input type="text" class="form-control" id="txtApodo" ng-model="vm.difuntoEditar.difuntoID" disabled>
-                        <small class="form-text text-danger">* Campo requerido</small>
+                        <small class="form-text">* No puede editar este campo</small>
                     </div>
 
                     <div class="form-group">
@@ -31,7 +30,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="sltSexo">Sexo</label>
+                        <label for="sltSexo">Sexo del difunto:</label>
                         <select id="sltSexo" class="custom-select" ng-model="vm.difuntoEditar.sexo" required>
                             <option value="">Seleccione un sexo</option>
                             <option value="Femenino">Femenino</option>
@@ -42,21 +41,21 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="#txtEdad">Edad: </label>
+                        <label for="#txtEdad">Edad del difunto: </label>
                         <input type="number" class="form-control" id="txtEdad" ng-model="vm.difuntoEditar.edad">
                         <small class="form-text text-danger">* Campo requerido</small>
                     </div>
 
                     <div class="form-group">
-                        <label for="txtTamanno">Estatura del difunto (en cm.): </label>
+                        <label for="txtTamanno">Estatura del difunto (en metros): </label>
                         <input type="number" class="form-control" id="txtTamanno" ng-model="vm.difuntoEditar.estatura">
                         <small class="form-text text-danger">* Campo requerido</small>
                     </div>
                 </div>
 
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-primary">Editar difunto</button>
-                    <button type="button" class="btn btn-danger" ng-click="vm.regresar()">Regresar</button>
+                <div class="col-md-12 mb-5">
+                    <button type="submit" class="btn btn-info">Editar difunto</button>
+                    <button type="button" class="btn btn-dark" ng-click="vm.regresar()">Regresar</button>
                 </div>
             </form>
 
