--- a/public/components/difuntos/listarDifuntos/listarDifuntos.view.html
+++ b/public/components/difuntos/listarDifuntos/listarDifuntos.view.html
@@ -1,3 +1,4 @@
+<div ng-include="'./components/includes/_header.html'"></div>
 <main class="container-fluid">
     <section class="row">
 
@@ -8,7 +9,7 @@
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">Cédula del cliente</th>
-                        <th scope="col">Identificador del difunto</th>
+                        <th scope="col">Código</th>
                         <th scope="col">Edad</th>
                         <th scope="col">Apodo</th>
                         <th scope="col">Sexo</th>
@@ -27,13 +28,13 @@
                         <td>{{difunto.sexo}}</td>
                         <td>{{difunto.estatura}}</td>
                         <td>
-                            <button class="btn btn-primary" type="button" ng-click="vm.agregarEntierro(difunto)">Agregar entierro</button>
+                            <button class="btn btn-info" type="button" ng-click="vm.agregarEntierro(difunto)">Agregar entierro</button>
                         </td>
                         <td>
-                            <button class="btn btn-success" type="button" ng-click="vm.listarEntierro(difunto)">Mostrar entierro</button>
+                            <button class="btn btn-info" type="button" ng-click="vm.listarEntierro(difunto)">Mostrar entierro</button>
                         </td>
                         <td>
-                            <button class="btn btn-danger" type="button" ng-click="vm.editarDifunto(difunto)">Modificar difunto</button>
+                            <button class="btn btn-info" type="button" ng-click="vm.editarDifunto(difunto)">Editar difunto</button>
                         </td>
                     </tr>
                 </tbody>
@@ -41,8 +42,9 @@
 
         </div>
         <div class="col-md-12">
-            <button type="button" class="btn btn-danger" ng-click="vm.regresar()">Regresar</button>
+            <button type="button" class="btn btn-info" ng-click="vm.regresar()">Regresar</button>
         </div>
 
     </section>
 </main>
+<div ng-include="'./components/includes/_footer.html'"></div>
