--- a/public/components/difuntos/registrarDifuntos/registrarDifuntos.view.html
+++ b/public/components/difuntos/registrarDifuntos/registrarDifuntos.view.html
@@ -4,7 +4,7 @@
 
     <section class="row">
 
-        <div class="col-md-12 mt-5">
+        <div class="col-md-12 my-5">
 
             <h1 class="text-center">Registrar difuntos a {{vm.usuarioActivo}}</h1>
 
@@ -13,7 +13,7 @@
                 <div class="col-md-4">
 
                     <div class="form-group">
-                        <label for="#txtApodo">Identificador para el muerto(código numerico):</label>
+                        <label for="#txtApodo">Código del difunto (código numerico):</label>
                         <input type="number" class="form-control" id="txtApodo" ng-model="vm.difuntoNuevo.difuntoID">
                         <small class="form-text text-danger">* Campo requerido</small>
                     </div>
@@ -24,13 +24,13 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="txtEdad">Edad: </label>
+                        <label for="txtEdad">Edad del difunto: </label>
                         <input type="number" class="form-control" id="txtEdad" ng-model="vm.difuntoNuevo.edad">
                         <small class="form-text text-danger">* Campo requerido</small>
                     </div>
 
                     <div class="form-group">
-                        <label for="sltSexo">Sexo</label>
+                        <label for="sltSexo">Sexo del difunto:</label>
                         <select id="sltSexo" class="custom-select" ng-model="vm.difuntoNuevo.sexo" required>
                             <option value="">Seleccione un sexo</option>
                             <option value="Femenino">Femenino</option>
@@ -41,15 +41,15 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="#txtTamanno">Estatura del difunto (en cm.): </label>
+                        <label for="#txtTamanno">Estatura del difunto (en metros): </label>
                         <input type="number" class="form-control" id="txtTamanno" ng-model="vm.difuntoNuevo.estatura">
                         <small class="form-text text-danger">* Campo requerido</small>
                     </div>
                 </div>
 
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-primary">Registrar difunto</button>
-                    <button type="button" class="btn btn-danger" ng-click="vm.regresar()">Regresar</button>
+                <div class="col-md-12 mb-5">
+                    <button type="submit" class="btn btn-info">Registrar difunto</button>
+                    <button type="button" class="btn btn-secondary" ng-click="vm.regresar()">Regresar</button>
                 </div>
 
             </form>
