--- a/public/components/includes/_header.html
+++ b/public/components/includes/_header.html
@@ -1,5 +1,5 @@
 <header class="mb-5">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top bg-dark-fn">
       <a class="navbar-brand" href="#">Funeraria</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
