--- a/public/components/landingPage/landingPage.view.html
+++ b/public/components/landingPage/landingPage.view.html
@@ -1,7 +1,11 @@
 <div ng-include = "'./components/includes/_header.html'"></div>
 
-<main>
-  <h1>Landing Page</h1>
+<main class="container">
+  <div class="row">
+    <div class="col-md-12 my-5">
+        <h1 class="text-center">Funeraria</h1>
+    </div>
+  </div>
 </main>
 
 <div ng-include="'./components/includes/_footer.html'"></div>
