--- a/public/components/login/login.view.html
+++ b/public/components/login/login.view.html
@@ -19,13 +19,13 @@
 
           <div class="form-group">
             <label for="#txtContrasenna">Contraseña:</label>
-            <input type="text" class="form-control" id="txtContrasenna" ng-model="vm.usuario.contrasenna">
+            <input type="password" class="form-control" id="txtContrasenna" ng-model="vm.usuario.contrasenna">
             <small class="form-text text-danger">* Campo requerido</small>
           </div>
         </div>
         <div class="col-md-12">
-          <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-          <button type="button" class="btn btn-danger" ng-click="vm.registrar()">Crear cuenta</button>
+          <button type="submit" class="btn btn-info">Iniciar sesión</button>
+          <button type="button" class="btn btn-secondary" ng-click="vm.registrar()">Crear cuenta</button>
         </div>
       </form>
     </div>
