--- a/public/components/usuarios/editarUsuarios/editarUsuarios.view.html
+++ b/public/components/usuarios/editarUsuarios/editarUsuarios.view.html
@@ -4,9 +4,9 @@
 
   <section class="row">
 
-    <div class="col-md-12 mt-5">
+    <div class="col-md-12 my-5">
 
-      <h1 class="text-center">Editar usuario: {{vm.usuarioActivo}}</h1>
+      <h1 class="text-center">Editando a {{vm.usuarioActivo}}</h1>
 
       <form name="frmModificarUsuarios" class="row mt-5" ng-submit="vm.editarUsuario(vm.usuarioEditar)">
 
@@ -15,7 +15,7 @@
           <div class="form-group">
             <label for="txtCedula">Número de cédula:</label>
             <input type="number" class="form-control" id="txtCedula" ng-model="vm.usuarioEditar.cedula" disabled>
-            <small class="form-text text-danger">* Campo requerido</small>
+            <small class="form-text">* Este campo no se puede editar</small>
           </div>
           <div class="form-group">
             <label for="txtNombre">Nombre:</label>
@@ -98,9 +98,9 @@
 
         </div>
 
-        <div class="col-md-12">
-          <button type="submit" class="btn btn-primary">Modificar</button>
-          <button type="button" class="btn btn-danger" ng-click="vm.regresar()">Regresar</button>
+        <div class="col-md-12 mb-5">
+          <button type="submit" class="btn btn-info">Modificar</button>
+          <button type="button" class="btn btn-secondary" ng-click="vm.regresar()">Regresar</button>
         </div>
 
       </form>
