--- a/public/components/usuarios/registrarUsuarios/registrarUsuarios.view.html
+++ b/public/components/usuarios/registrarUsuarios/registrarUsuarios.view.html
@@ -4,9 +4,9 @@
 
   <section class="row">
 
-    <div class="col-md-12 mt-5">
+    <div class="col-md-12 my-5">
 
-      <h1 class="text-center">Registro de usuarios</h1>
+      <h1 class="text-center">Registro de usuario</h1>
 
       <form name="frmRegistroUsuarios" class="row mt-5" ng-submit="vm.registrarUsuario(vm.usuarioNuevo)">
 
@@ -90,19 +90,19 @@
           </div>
           <div class="form-group">
             <label for="txtContrasenna">Contraseña:</label>
-            <input type="text" class="form-control" id="txtContrasenna" ng-model="vm.usuarioNuevo.contrasenna" required>
+            <input type="password" class="form-control" id="txtContrasenna" ng-model="vm.usuarioNuevo.contrasenna" required>
             <small class="form-text text-danger">* Campo requerido</small>
           </div>
           <div class="form-group">
             <label for="txtConfirmarContrasenna">Confirmar contraseña:</label>
-            <input type="text" class="form-control" id="txtConfirmarContrasenna" ng-model="vm.usuarioNuevo.confirmarContrasenna" required>
+            <input type="password" class="form-control" id="txtConfirmarContrasenna" ng-model="vm.usuarioNuevo.confirmarContrasenna" required>
             <small class="form-text text-danger">* Campo requerido</small>
           </div>
 
         </div>
 
-        <div class="col-md-12">
-          <button type="submit" class="btn btn-primary">Registrar usuario</button>
+        <div class="col-md-12 mb-5">
+          <button type="submit" class="btn btn-info">Registrar usuario</button>
         </div>
 
       </form>
