Agregar boton listar usuarios
Se sgrego el boton que redirecciona a la vista que lista los usuarios

--- a/public/components/retoques/listarRetoques/listarRetoques.view.html
+++ b/public/components/retoques/listarRetoques/listarRetoques.view.html
@@ -28,6 +28,8 @@
             </table>
         
             <button class="btn btn-success" ng-click="vm.agregarRetoque ()">Agregar retoque</button>
+
+            <button type="button" class="btn btn-primary" ng-click="vm.inicio ()">Inicio</button>
   
         </div>
     </section>
